Seeing if this fixes the stubborn links on mobile

--- a/style.css
+++ b/style.css
@@ -191,6 +191,10 @@ a:visited {
     width: calc(var(--avw) * 3.2);
 }
 
+.details .makerInfo a {
+    z-index: 5
+}
+
 .details .levelText {
     width: calc(var(--avw) * 18);
     margin-left: calc(var(--avw) * 10);
